--- a/public/index.html
+++ b/public/index.html
@@ -293,7 +293,7 @@
     
     </p>
 
-    <p>Dopo aver inciso cinque canzoni su un demo, ottenemmo il nostro primo ingaggio al Covo di Bologna, facendo credere di essere una band navigata nella scena musicale emiliana. In realtà, avevamo solo cinque brani e nessun concerto all&rsquo;attivo.</p>
+    <p>Dopo aver inciso cinque canzoni su un demo, ottenemmo il nostro primo ingaggio al Covo di Bologna, facendo credere di essere una band navigata nella scena musicale emiliana, ma avevamo solo una decina di brani e nessun concerto all&rsquo;attivo.</p>
 
     
     <div class="card-actions justify-between items-center mt-4">
@@ -320,7 +320,7 @@
 
       <div class="flex items-center">
         <ion-icon name="time" class="mr-1"></ion-icon>
-        <span>2 minuti</span>
+        <span>3 minuti</span>
       </div>
     </div>
   </div>
