--- a/public/404.html
+++ b/public/404.html
@@ -81,6 +81,27 @@
 
   
   
+  <meta name="author" content="The Radiostars" />
+  
+  
+  
+  <link href="https://facebook.com/username" rel="me" />
+  
+  
+  <link href="https://www.flickr.com/photos/username/" rel="me" />
+  
+  
+  <link href="https://instagram.com/username" rel="me" />
+  
+  
+  <link href="https://open.spotify.com/user/userid" rel="me" />
+  
+  
+  <link href="https://twitter.com/username" rel="me" />
+  
+  
+  <link href="https://youtube.com/username" rel="me" />
+  
   
   
   
@@ -449,7 +470,7 @@
     <p class="text-sm text-neutral-500 dark:text-neutral-400">
       &copy;
       2025
-      
+      The Radiostars
     </p>
     
 
