Aggiunto Punto Zero

--- a/public/discog_dev/we-bastard/index.html
+++ b/public/discog_dev/we-bastard/index.html
@@ -1149,11 +1149,11 @@ Compilation - Blu Bus Records 1995</p>
         </span>
         <span>
           
-            <a class="flex text-right group ml-3" href="/discog_dev/dancing/">
+            <a class="flex text-right group ml-3" href="/discog_dev/punto-zero/">
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Danging le Cibaou-Cibaou</span
+                  >Punto Zero n.25/25</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
