--- a/public/discog_dev/45rpm/index.html
+++ b/public/discog_dev/45rpm/index.html
@@ -107,7 +107,7 @@
     "keywords": ["Singoli"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "59"
+    "wordCount": "60"
   }]
   </script>
 
@@ -1216,6 +1216,14 @@ Single vinyl 45 RPM allegato al numero 15 della rivista Urlo edita nel 1995 da P
     <span class="flex" style="cursor: pointer;">
   <span class="rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400">
     Interviste
+  </span>
+</span>
+  </span>
+  
+  <span style="margin-top:0.5rem" class="mr-2" onclick="window.open(&#34;/tags/press/&#34;,'_self');return false;">
+    <span class="flex" style="cursor: pointer;">
+  <span class="rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400">
+    Press
   </span>
 </span>
   </span>
