--- a/public/press/20030701-mucchio/index.html
+++ b/public/press/20030701-mucchio/index.html
@@ -1125,7 +1125,7 @@ Contatti: <a href="https://www.theradiostars.com" target="_blank">www.theradiost
       <div class="flex justify-between pt-3">
         <span>
           
-            <a class="flex group mr-3" href="/press/19980101-mucchio-intervista/">
+            <a class="flex group mr-3" href="/press/2000208-mucchio/">
               <span
                 class="mr-3 text-neutral-700 group-hover:text-primary-600 ltr:inline rtl:hidden dark:text-neutral dark:group-hover:text-primary-400"
                 >&larr;</span
@@ -1137,7 +1137,7 @@ Contatti: <a href="https://www.theradiostars.com" target="_blank">www.theradiost
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Intervista su Mucchio Selvaggio (num. 288)</span
+                  >Intervista su Mucchio Selvaggio (num. 383)</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
