Centerfold di fwmhb

--- a/public/discog/fwmhb/index.html
+++ b/public/discog/fwmhb/index.html
@@ -1344,6 +1344,7 @@ Play on Jamendo
   
     <img src="back.jpg" class="grid-w33"/>
     <img src="credits.jpg" class="grid-w33"/>
+    <img src="centerfold.jpg" class="grid-w33"/>
 
 </div>
 
