--- a/public/press/19960000-urlo-intervista/index.html
+++ b/public/press/19960000-urlo-intervista/index.html
@@ -108,7 +108,7 @@
     "keywords": ["Interviste","Press"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "790"
+    "wordCount": "789"
   }]
   </script>
 
@@ -1037,8 +1037,7 @@ Intervista per l&rsquo;audiorivista Urlo (Anno V, n.15)</p>
 <p>&ldquo;Ho avuto modo di trascorrere una mattinata con i RADIOSTARS, sono le persone più sagge che abbia incontrato da quindici anni a questa parte.&rdquo; (Luca Radelli, docente di scienza del comportamento umano presso la inter-research university di Goss City, Maine U.S.A.)</p>
 <p>La prima volta che incontrai i Radiostars fu al concerto degli americani Brutal Juice è Reggio Emilia.
 Loro facevano da spalla ai ragazzi texani. I Radiostars apparvero di colpo sul palco che nel frattempo si era fatto buio come tutto il locale eccetto una potentissima luce strobo puntata verso il pubblico. Senza avere il tempo di pensare fui travolta dalla prima canzone, ebbi paura. Il cantante cantava e suonava la chitarra come uno spastico in fiamme, pensai il giorno dopo, pressapoco ciò che facevano gli altri due. Il volume era incredibile, i texani erano impazziti, non credevano a ciò che sentivano e vedevano. Fu il concerto più divertente e incredibile che abbia mai visto, così pensai che sarebbe stato grande poter fare due chiacchiere con loro per lo spazio musica del giornalino della Scuola. Il giorno seguente telefonai e presi subito accordi per una intervista. L&rsquo;appuntamento fu fissato presso lo studio dove i Radiostars fanno le prove, mi fu detto di salire all&rsquo;ufficio generale al terzo piano, qui mi dissero che i ragazzi mi stavano aspettando nella sala del grande schermo, andai e bussai alla porta scorrevole ed entrai.</p>
-<p>Considerando la dinamite che avevano addosso la sera in cui li vidi ero pronta ad intervistare i Sex
-Pistols, coloro che invece mi trovai davanti, una volta entrata, erano tre simpatici ragazzi dall&rsquo;aspetto tutt&rsquo;altro che punk. Quella che vi riporto è la conversazione che avvenne tra me ed i Radiostars pochi giorni dopo il concerto.</p>
+<p>Considerando la dinamite che avevano addosso la sera in cui li vidi ero pronta ad intervistare i Sex Pistols, coloro che invece mi trovai davanti, una volta entrata, erano tre simpatici ragazzi dall&rsquo;aspetto tutt&rsquo;altro che punk. Quella che vi riporto è la conversazione che avvenne tra me ed i Radiostars pochi giorni dopo il concerto.</p>
 <p><strong>Stefania</strong>: &ldquo;Ascoltando la vostra musica non sono riuscita ad inquadrare il vostro genere
 musicale. Come vi definireste? e quali sono le vostre principali fonti di ispirazione?&rdquo;</p>
 <p><strong>Max</strong>: &ldquo;Come ormai tutti sanno il nostro genere musicale non è ne il pop; ne il punk, ne il grunge, ma il cibaou-cibaou.”</p>
@@ -1046,8 +1045,7 @@ musicale. Come vi definireste? e quali sono le vostre principali fonti di ispira
 <p><strong>Cico</strong>: &ldquo;<em>S</em>, è il genere musicale del futuro. Noi non siamo ancora perfettamente cibaou-cibaou. Ci stiamo preparando.&rdquo;</p>
 <p><strong>Dadda</strong>: “Si, sarebbe infatti più corretto dire che siamo pre-cibaou-cibaou”.</p>
 <p><strong>Stefania</strong>: &ldquo;Ma insomma&hellip; quali sono le vostre fonti di ispirazione?&rdquo;</p>
-<p><strong>Dadda</strong>: &ldquo;Non ascoltiamo nessun tipo di musica, quella poca che abbiamo sentito ci fa schifo, soprat
-tutto i gruppi italiani.&rdquo;</p>
+<p><strong>Dadda</strong>: &ldquo;Non ascoltiamo nessun tipo di musica, quella poca che abbiamo sentito ci fa schifo, soprattutto i gruppi italiani.&rdquo;</p>
 <p><strong>Stefania</strong>: &ldquo;Per questo utilizzate per i vostri testi la lingua inglese?&rdquo;</p>
 <p><strong>Cico</strong>: &ldquo;No! Utilizziamo la lingua inglese perché è quella che più si avvicina allo stile cibaou-cibaou.&rdquo;</p>
 <p><strong>Dadda</strong>: &ldquo;Sì Infatti la lingua inglese non è ancora perfetta. Stiamo comunque prendendo accordi con il mondo anglosassone per modificarla.&rdquo;</p>
