Corrette maiuscole titoli EM come sul cd

--- a/public/press/19970701-ballando-le-cibaou-cibaou/index.html
+++ b/public/press/19970701-ballando-le-cibaou-cibaou/index.html
@@ -1024,7 +1024,7 @@
 
   </span>
 
-Articolo di Emanuele Franzoia il periodico &ldquo;Scandiano Giovani&rdquo; uscito nel mese di lugio 1997</p>
+Articolo di Emanuele Franzoia il periodico &ldquo;Scandiano Giovani&rdquo; uscito nel mese di luglio 1997</p>
 <p>Dalla ricca faretra musicale reggiana sta per partire un’altra freccia che, visti i primi riconoscimenti, promette di centrare il bersaglio. Stiamo parlando dello scatenato trio scandinase “Radiostars”, composto da Massimo Barbieri (Max) voce e chitarra elettrica, Davide Gambarelli (Dadda) al basso e Cesare Anceschi (Cico) alla batteria. Dopo due lusinghieri secondi posti ai concorsi &lsquo;Terremoto Rock&rsquo; e &lsquo;Rock Revolution Contest&rsquo; ed apparizioni passate per nulla inosservate su alcune compilation a fianco di altre band emergenti, finalmente a Giugno uscirà il loro primo CD, “Dancing le Cibaou-Cibaou”.</p>
 <p>Cibaou-Cibaou è il termine che i tre hanno coniato per descrivere il tipo di musica che propongono. In effetti però, non è che il termine chiarisca più di tanto le idee di chi legge. In realtà ci si trova di fronte a sonorità indiavolate, scarne, trascinanti, estremamente legate a quelle delle garage-band degli anni ’70, ma soprattutto al punk. Se quindi vogliamo trovare delle parentale con qualche illustre predecessore, i nomi che vengono alla mente sono Sex Pistols, Sonic Youth o, venendo all’attualità più italiana, i dEUS.</p>
 <p>In circolazione ora la più succosa produzione di quegli irruenti Radiostars è un 45 giri (che nostalgia rivedere quei formati!) uscito alla fine dell’anno dal Dicembre della rivista “Urlo” nel 1996.</p>
