--- a/public/press/19970801-rumore-dancing/index.html
+++ b/public/press/19970801-rumore-dancing/index.html
@@ -1035,7 +1035,7 @@
 
 Recensione di Luca Frazzi per <a href="https://it.wikipedia.org/wiki/Rumore_%28rivista%29" target="_blank">Rumore</a> agosto 1998</p>
 <p>Una bella sorpresa è rappresentata dai Radiostars, della provincia di Reggio Emilia, titolari di un CD d&rsquo;esordio che scomoda i nomi di Voidoids, Talking Heads e Television.</p>
-<p>Davvero dificile da inquadrare il trio di &ldquo;Dancing le Cibaou-Cibaou” (Asbury Park), anche perché un approccio tanto &lsquo;straniante&rsquo; nei confronti del rock&rsquo;n&rsquo;roll di base non ha termini di paragone nel panorama indipendente italiano di questi anni. Spero sinceramente che i Radiostars conservino quell&rsquo;(apparente?) ingenuità tipica della provincia e l&rsquo;ironia con la quale, soprattutto dal vivo, fanno a pezzi e riassemblano quarant&rsquo;anni di musica. Teneteli d&rsquo;occhio.</p>
+<p>Davvero difficile da inquadrare il trio di &ldquo;Dancing le Cibaou-Cibaou” (Asbury Park), anche perché un approccio tanto &lsquo;straniante&rsquo; nei confronti del rock&rsquo;n&rsquo;roll di base non ha termini di paragone nel panorama indipendente italiano di questi anni. Spero sinceramente che i Radiostars conservino quell&rsquo;(apparente?) ingenuità tipica della provincia e l&rsquo;ironia con la quale, soprattutto dal vivo, fanno a pezzi e riassemblano quarant&rsquo;anni di musica. Teneteli d&rsquo;occhio.</p>
 
           
           
