--- a/public/press/19980101-mucchio-intervista/index.html
+++ b/public/press/19980101-mucchio-intervista/index.html
@@ -108,7 +108,7 @@
     "keywords": ["Interviste","Press"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "890"
+    "wordCount": "891"
   }]
   </script>
 
@@ -1036,15 +1036,11 @@
 Articolo di Francesco Battisti da <a href="https://it.wikipedia.org/wiki/Il_mucchio_selvaggio_%28rivista%29" target="_blank">Mucchio Selvaggio</a> n.288 gennaio 1998</p>
 <p>Inventori del <em>cibaou cibaou</em> - questa la singolare definizione con cui Cico, Max e Dadda hanno battezzato il loro stile - i Radiostars sono autori di un originale psycho-blues che sembra attingere ispirazione anche dall&rsquo;ambito punk/wave. I tre ragazzi di Scandiano (Reggio Emilia) hanno dalla loro una genuina sfrontatezza che rende le canzoni gustose parodie dei generi e traccia un quadro spregiudicato e ironico della “next generation”: forse è per questo che qualcuno li ha voluti sul palco di MTV, insieme a band nazionali più blasonate, per aprire il concerto degli U2 a Reggio Emilia. Sono le 22.15 quando chiamo Max e Cico al telefono, pochi minuti dopo che i loro strumenti sono stati riposti nelle custodie.</p>
 <p><strong>Per chi ancora non vi conosce, qual è la storia dei Radiostars?</strong></p>
-<p>Abbiamo iniziato a suonare assieme nel ‘94 con l&rsquo;intenzione di comporre da subito brani nostri. Poi sono arrivati i primi concerti, alcuni concorsi e le esibizioni di supporto agli Statuto e ai texani Brutal Juice. Nel frattempo, il nostro demo <em>Very Clean</em> è giunto nelle redazioni di diversi giornali,
-fanzine ed etichette discografiche. I riscontri sono stati senza dubbio positivi perché nel ‘95 la Blu Bus di Aosta ha inserito la nostra “Let&rsquo;s Go&quot; nella compilation &ldquo;We Bastard Motherfuckers&rdquo;. L&rsquo;anno successivo la rivista “Urlo&quot; ha allegato al numero 15 un 45 giri con due nostri brani e sempre
-nel ‘96 abbiamo partecipato con “Bang” alla raccolta “Punto Zero&quot; prodotta dalla Toast di Torino, Il nostro primo CD <em>Dancing Le Cibaou Cibaou</em> è uscito invece per
-Asbury Park alcuni mesi fa.</p>
+<p>Abbiamo iniziato a suonare assieme nel ‘94 con l&rsquo;intenzione di comporre da subito brani nostri. Poi sono arrivati i primi concerti, alcuni concorsi e le esibizioni di supporto agli Statuto e ai texani Brutal Juice. Nel frattempo, il nostro demo <em>Very Clean</em> è giunto nelle redazioni di diversi giornali, fanzine ed etichette discografiche. I riscontri sono stati senza dubbio positivi perché nel ‘95 la Blu Bus di Aosta ha inserito la nostra “Let&rsquo;s Go&quot; nella compilation &ldquo;We Bastard Motherfuckers&rdquo;. L&rsquo;anno successivo la rivista “Urlo&quot; ha allegato al numero 15 un 45 giri con due nostri brani e sempre nel ‘96 abbiamo partecipato con “Bang” alla raccolta “Punto Zero&quot; prodotta dalla Toast di Torino, Il nostro primo CD <em>Dancing Le Cibaou Cibaou</em> è uscito invece per Asbury Park alcuni mesi fa.</p>
 <p><strong>Sono stati loro a mettersi sulle vostre tracce?</strong></p>
 <p>Asbury Park è un negozio di dischi nonché etichetta discografica delle nostre parti; gli abbiamo portato il demo e fatto ascoltare i pezzi nuovi. Hanno subito creduto in noi e ci hanno prodotto l&rsquo;album.</p>
 <p><strong>Definite ll vostro sound “cibaou cibaou”, ma non vi nascondo di avervi trovato uno spirito garage-blues analogo a quello di Jon Spencer e spunti wave alla Devo, Television e Talking Heads. Questi gruppi vi hanno in qualche modo influenzato?</strong></p>
-<p>Forse neanche tanto. A dir la verità ascoltiamo gruppi molto diversi dal genere che suoniamo, come per
-esempio Pet Shop Boys e Depeche Mode. Comunque è vero che spesso siamo paragonati ai Devo, ai Voidoids, alla scena punk del ‘77, e tantissimi ci dicono che somigliamo a Jon Spencer, ma lo conosciamo davvero molto poco.</p>
+<p>Forse neanche tanto. A dir la verità ascoltiamo gruppi molto diversi dal genere che suoniamo, come per esempio Pet Shop Boys e Depeche Mode. Comunque è vero che spesso siamo paragonati ai Devo, ai Voidoids, alla scena punk del ‘77, e tantissimi ci dicono che somigliamo a Jon Spencer, ma lo conosciamo davvero molto poco.</p>
 <p><strong>Comunque il vostro approccio alla materia rock&rsquo;n&rsquo;roll è davvero singolare, perchè fate funzionare in modo spregiudicato quello che gli altri scartano!</strong></p>
 <p>Quando siamo in sala prove ad elaborare un nuovo pezzo, ognuno di noi sa che tipo di canzone vuole fare in quel momento. Quello che tu dici avviene magari a livello inconscio, non è un&rsquo;operazione costruita consapevolmente. Alcune citazioni vengono spontaneamente e funzionano bene, pensa al finale di “Let&rsquo;s Go” ripreso ai Ramones. ma sono attimi, situazioni, non obiettivi.</p>
 <p><strong>Che importanza date all&rsquo;ironia e all&rsquo;autoironia?</strong></p>
@@ -1053,11 +1049,9 @@ esempio Pet Shop Boys e Depeche Mode. Comunque è vero che spesso siamo paragona
 <p>No, noi non abbiamo sborsato una lira, se non per comprare le bacchette della batteria e le corde per la chitarra. Abbiamo registrato in uno studio ottimo, con la produzione artistica di Fabio Ferraboschi e il supporto della grande esperienza di Emiliano Fantuzzi.</p>
 <p><strong>Avete suonato a Reggio Emilia prima degli U2 insieme a Prozac + e Casino Royale. È successo quasi per caso, vero?</strong></p>
 <p>Sì, è stato bellissimo. Qualcuno ci diceva, &ldquo;bene, farete da supporto agli U2”, ma noi
-non ne sapevamo praticamente niente. Poi il giorno prima mi hanno chiamato dall&rsquo;organizzazione chiedendomi se eravamo disponibili. Tutto è accaduto nel giro di ventiquattrore. Poi sono arrivati i giornalisti, le interviste&hellip; ma è incredibile, perché noinon abbiamo fatto nulla!</p>
+non ne sapevamo praticamente niente. Poi il giorno prima mi hanno chiamato dall&rsquo;organizzazione chiedendomi se eravamo disponibili. Tutto è accaduto nel giro di ventiquattrore. Poi sono arrivati i giornalisti, le interviste&hellip; ma è incredibile, perché noi non abbiamo fatto nulla!</p>
 <p><strong>Sul palco cosa avete provato?</strong></p>
-<p>Quando ti trovi davanti una folla immensa hai anche un po&rsquo; paura, pensi di essere fischiato perché tutti vogliono vedere l&rsquo;attrazione principale. Invece è andata benissimo: abbiamo suonato mezz&rsquo;ora, il
-pubblico ci ha apprezzati, tecnicamente tutto funzionava a meraviglia. Certo per un po&rsquo; vivi una situazione inverosimile, alla fine dei pezzi non senti quegli applausi sparsi come succede davanti a
-duecento persone ma sei coinvolto in un boato continuo. Sì, dopo gli U2 siamo diventati famosissimi. Ora la gente ci chiede gli autografi!</p>
+<p>Quando ti trovi davanti una folla immensa hai anche un po&rsquo; paura, pensi di essere fischiato perché tutti vogliono vedere l&rsquo;attrazione principale. Invece è andata benissimo: abbiamo suonato mezz&rsquo;ora, il pubblico ci ha apprezzati, tecnicamente tutto funzionava a meraviglia. Certo per un po&rsquo; vivi una situazione inverosimile, alla fine dei pezzi non senti quegli applausi sparsi come succede davanti a duecento persone ma sei coinvolto in un boato continuo. Sì, dopo gli U2 siamo diventati famosissimi. Ora la gente ci chiede gli autografi!</p>
 <p><strong>Quella serata vi ha aperto nuove porte?</strong></p>
 <p>Per il momento stiamo suonando di più, la nostra attività live si sta allargando al di fuori dell&rsquo;area di Reggio Emilia. Sì, non ci possiamo lamentare.</p>
 <p><strong>Siete stati contattati da qualche major?</strong></p>
