--- a/public/discog/em/index.html
+++ b/public/discog/em/index.html
@@ -1163,7 +1163,7 @@ Play on Jamendo
 </tr>
 <tr>
 <td style="text-align:center">2</td>
-<td style="text-align:left">Will, Frankl and the Truth</td>
+<td style="text-align:left">Will, Frankl and the truth</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -1183,17 +1183,17 @@ Play on Jamendo
 </tr>
 <tr>
 <td style="text-align:center">6</td>
-<td style="text-align:left">Nothing is possible</td>
+<td style="text-align:left">Nothing is Possible</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:center">7</td>
-<td style="text-align:left">Railway girls</td>
+<td style="text-align:left">Railway Girls</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:center">8</td>
-<td style="text-align:left">She sings my favourite songs</td>
+<td style="text-align:left">She Sings my Favourite Songs</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
