--- a/public/press/2001-intervista-gazzetta/index.html
+++ b/public/press/2001-intervista-gazzetta/index.html
@@ -1246,11 +1246,11 @@ eravamo altrettanto esperti e calcolatori, eravamo più irruenti ma era un modo 
         </span>
         <span>
           
-            <a class="flex text-right group ml-3" href="/press/20030701-mucchio/">
+            <a class="flex text-right group ml-3" href="/press/20030600-mucchio-recensione-fwmhb/">
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Intervista su Mucchio Selvaggio (num 540)</span
+                  >Recensione di For What Might Have Been su Mucchio Selvaggio (num 525)</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
