Test visualizzazione data dall'idiozia al potere. Scazza!

--- a/public/press/20030316-gazzetta/index.html
+++ b/public/press/20030316-gazzetta/index.html
@@ -1076,7 +1076,7 @@ questo nuovo Lp si rivela un percorso ricco di piccoli capolavori della musica r
       <div class="flex justify-between pt-3">
         <span>
           
-            <a class="flex group mr-3" href="/press/000-template-press/">
+            <a class="flex group mr-3" href="/press/2001-intervista-gazzetta/">
               <span
                 class="mr-3 text-neutral-700 group-hover:text-primary-600 ltr:inline rtl:hidden dark:text-neutral dark:group-hover:text-primary-400"
                 >&larr;</span
@@ -1088,7 +1088,7 @@ questo nuovo Lp si rivela un percorso ricco di piccoli capolavori della musica r
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Titolo della pagina</span
+                  >Intervista Gazzetta di Reggio 2001</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
