--- a/public/press/000-template-press/index.html
+++ b/public/press/000-template-press/index.html
@@ -1077,11 +1077,11 @@ Riferimenti dell&rsquo;articolo: es. autore rivista ecc.</p>
         </span>
         <span>
           
-            <a class="flex text-right group ml-3" href="/press/19960000-urlo-intervista/">
+            <a class="flex text-right group ml-3" href="/press/19940616-gazzetta/">
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Intervista su Urlo</span
+                  >Articolo Gazzetta di Reggio - semifinale terremoto rock</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
