--- a/public/press/19960000-urlo-intervista/index.html
+++ b/public/press/19960000-urlo-intervista/index.html
@@ -1116,7 +1116,7 @@ attorno?”</p>
       <div class="flex justify-between pt-3">
         <span>
           
-            <a class="flex group mr-3" href="/press/000-template-press/">
+            <a class="flex group mr-3" href="/press/19940616-gazzetta/">
               <span
                 class="mr-3 text-neutral-700 group-hover:text-primary-600 ltr:inline rtl:hidden dark:text-neutral dark:group-hover:text-primary-400"
                 >&larr;</span
@@ -1128,7 +1128,7 @@ attorno?”</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >TEMPLATE: Titolo della pagina</span
+                  >Articolo Gazzetta di Reggio - semifinale terremoto rock</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
