Corretto carattere non visualizzato correttamente

--- a/public/press/20030316-gazzetta/index.html
+++ b/public/press/20030316-gazzetta/index.html
@@ -11,7 +11,7 @@
   <title>I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003) &middot; The Radiostars</title>
   <meta name="title" content="I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003) &middot; The Radiostars" />
   
-  <meta name="description" content="2003. Oggi concerto a Scandiano, paese d&#39;origine, dopo i successi Americani" />
+  <meta name="description" content="2003. Oggi concerto a Scandiano, paese d`origine, dopo i successi Americani" />
   <meta name="keywords" content="Press, " />
   
   
@@ -67,7 +67,7 @@
   <meta property="og:url" content="http://localhost:1313/press/20030316-gazzetta/">
   <meta property="og:site_name" content="The Radiostars">
   <meta property="og:title" content="I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003)">
-  <meta property="og:description" content=" Oggi concerto a Scandiano, paese d’origine, dopo i successi Americani ">
+  <meta property="og:description" content=" Oggi concerto a Scandiano, paese d`origine, dopo i successi Americani ">
   <meta property="og:locale" content="it">
   <meta property="og:type" content="article">
     <meta property="article:section" content="press">
@@ -80,7 +80,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/press/20030316-gazzetta/featured.png">
   <meta name="twitter:title" content="I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003)">
-  <meta name="twitter:description" content=" Oggi concerto a Scandiano, paese d’origine, dopo i successi Americani ">
+  <meta name="twitter:description" content=" Oggi concerto a Scandiano, paese d`origine, dopo i successi Americani ">
 
   
   <script type="application/ld+json">
@@ -91,7 +91,7 @@
     "name": "I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003)",
     "headline": "I mitici Radiostars tornano a casa - Gazzetta di Reggio (2003)",
     
-    "abstract": "\u003col start=\u00222003\u0022\u003e\n\u003cli\u003eOggi concerto a Scandiano, paese d\u0026rsquo;origine, dopo i successi Americani\u003c\/li\u003e\n\u003c\/ol\u003e\n",
+    "abstract": "\u003col start=\u00222003\u0022\u003e\n\u003cli\u003eOggi concerto a Scandiano, paese d\u0060origine, dopo i successi Americani\u003c\/li\u003e\n\u003c\/ol\u003e\n",
     "inLanguage": "it",
     "url" : "http:\/\/localhost:1313\/press\/20030316-gazzetta\/",
     "author" : {
