--- a/public/press/index.html
+++ b/public/press/index.html
@@ -1368,7 +1368,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-           Oggi concerto a Scandiano, paese d&amp;rsquo;origine, dopo i successi Americani 
+           Oggi concerto a Scandiano, paese d`origine, dopo i successi Americani 
         </div>
         
       </div>
