--- a/public/press/2000208-mucchio/index.html
+++ b/public/press/2000208-mucchio/index.html
@@ -1028,7 +1028,7 @@ Insomma, quando è stato il nostro turno abbiamo capito che eravamo i più “cl
 Per il resto, alle volte, siamo come una barca con a bordo tre sordociechi.
 Anzi, una barca con a bordo un italiano, un francese e un tedesco&hellip; allora, il francese dice al tedesco&hellip;</p>
 <p><strong>Credete che nell’era della rivoluzione informatica il rock’n’roll sia capace di comunicare idee con la stessa forza di un tempo?</strong></p>
-<p>Sì, perchè non dovrebbe? Ci piace pensare che siamo ancora agli albori del rock&rsquo;n&rsquo;roll!!! Magari tra quattrocento anni un professore interrogherà un ragazzino che confonderà le date e dirà che Jerry Lee Lewis ha iniziato a suonare nel 1998&hellip;.
+<p>Sì, perché non dovrebbe? Ci piace pensare che siamo ancora agli albori del rock&rsquo;n&rsquo;roll!!! Magari tra quattrocento anni un professore interrogherà un ragazzino che confonderà le date e dirà che Jerry Lee Lewis ha iniziato a suonare nel 1998&hellip;.
 Immagina il professore che dice “Beh, sì, dopotutto è quasi la stessa cosa, è un errore da nulla”&hellip; come se io oggi mi sbagliassi di quarant’anni a datare la rivoluzione francese&hellip; Capita!</p>
 <p><strong>Alcuni autori ascoltano musica mentre scrivono. Succede la stessa cosa anche a voi? E, in generale, a quali band state ora prestando maggior attenzione?</strong></p>
 <p>Attualmente non ascoltiamo molta musica, pensa che io ho lo stereo in riparazione da quasi sei mesi e finora “More Traditional Than You” l&rsquo;ho sentito solo in mono.
@@ -1038,7 +1038,7 @@ Per quanto riguarda i nostri ascolti&hellip; beh, è una risposta un po&rsquo; d
 <p>Nella Vita? Beh, a volte sembra di no, ma molto probabilmente è solo un “no” temporaneo&hellip; Alla “fine fine” diremmo che c&rsquo;è sempre una “happy end”! Nel frattempo, però, devi tirare avanti con gli Happy Meal! Che humor! Wow!</p>
 <p><strong>In che misura le vostre canzoni sono influenzate dal vissuto di ognuno di voi?</strong></p>
 <p>Mhhh, non sono tanto ispirate dalla nostra vita privata. Scriviamo le canzoni pensando ad ottenere un buon risultato invece di sforzarci a metterci dentro a tutti i costi noi stessi
-La tua vita ci finisce sempre dentro perchè sei tu che scrivi la canzone, ma è una cosa diversa&hellip;</p>
+La tua vita ci finisce sempre dentro perché sei tu che scrivi la canzone, ma è una cosa diversa&hellip;</p>
 <p><strong>Cosa bolle attualmente in pentola per i Radiostars?</strong></p>
 <p>Un attimo che vado a controllare&hellip; Allora, sollevato il coperchio, nell’acqua che bolle si distinguono nell’ordine: una serie di concerti in Olanda che saranno cotti a Marzo, e alcune canzoni nuove a differenti livelli di cottura. Poi finito tutto il giro di concerti e la promozione di “More Traditional Than You” molto probabilmente ci faremo qualche settimana in Toscana, in un agriturismo dalle parti di San Gimignano&hellip;. o nel sud della Francia, tanto per ricaricare un po&rsquo; le batterie. Siamo tre grandissimi amici ed è bellissimo prendersi assieme queste parentesi di relax, andare a visitare i luoghi, assaggiare la cucina locale, i vini, dormire fino a tardi!
 Poi, una volta a casa, inizieremo a pensare seriamente al nuovo disco, che tra l’altro ha già un nome&hellip; ma questa è un altra storia!</p>
