--- a/public/press/2001-intervista-gazzetta/index.html
+++ b/public/press/2001-intervista-gazzetta/index.html
@@ -108,7 +108,7 @@
     "keywords": ["Interviste","Press"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "620"
+    "wordCount": "621"
   }]
   </script>
 
@@ -1146,12 +1146,12 @@ Kilmister è il primo passo degli scandianesi verso gli States.</p>
 <p>«Ci ha fatto molto piacere ed in effetti ci ha stupito che in cinque. giorni tutte le 15.000 - copie siano andate esaurite. Ha anche scombussolato un po’ i nostri piani e quelli della Shut eye. Per fortuna noi ne abbiamo ancora qualcuna ed altre sono in vendita nei negozi di dischi in attesa della ristampa».</p>
 <p><strong>Non lavorerete più con la vostra etichetta italiana?</strong></p>
 <p>«La Vurt recordz di Roma è sempre con noi e noi siamo sinceramente contenti di lavorare con ragazzi davvero in gamba come loro.»</p>
-<p><strong>Come avete contattato la Shut eye e cosa li ha convintia farvi firmare il contratto?</strong></p>
+<p><strong>Come avete contattato la Shut eye e cosa li ha convinti a farvi firmare il contratto?</strong></p>
 <p>«Ci hanno contattato loro. Qualcuno ha fatto ascoltare <em>More Traditional Than You</em> a Pete Knapp, il boss della Shut eye, e lui ne è rimasto entusiasta. Ci ha subito scritto chiedendoci se volevamo lavorare con loro. Cosi’ abbiamo scelto un brano tra quelli nuovi, lo abbiamo registrato e glielo abbiamo mandato».</p>
 <p><strong>Quanti brani avete per il nuovo album?</strong></p>
 <p>«Circa venti brani nuovi più una quindicina di inediti vecchi che si sono accumulati con il tempo, ma come al solito dovremo lasciarne fuori molti ed inserirne nell’album solo una decina. Non ci piace fare album da 80 minuti».</p>
 <p><strong>Cos&rsquo;altro ci puoi dire a proposito del nuovo album?</strong></p>
-<p>«Uscirà nel 2002, Messa Metronic è un piccolo assaggio. Cosa posso dirti. Potrei canticchiare qualche canzone ma non sapresti come publicarla nel tuo articolo. Comunque saremo a Radio antenna uno (104.7) la mattina del 5 ottobre per rispondere a tutte le domande possibili al telefono. E lì magari potremo anche canticchiare qualche brano dal disco nuovo».</p>
+<p>«Uscirà nel 2002, Messa Metronic è un piccolo assaggio. Cosa posso dirti. Potrei canticchiare qualche canzone ma non sapresti come pubblicarla nel tuo articolo. Comunque saremo a Radio antenna uno (104.7) la mattina del 5 ottobre per rispondere a tutte le domande possibili al telefono. E lì magari potremo anche canticchiare qualche brano dal disco nuovo».</p>
 <p><strong>Cosa è cambiato nei Radiostars dai tempi degli inizi?</strong></p>
 <p>«E&rsquo; difficile dirlo soprattutto per noi. Di solito sono gli altri che notano i cambiamenti,
 come quando incontri un vecchio amico, tu lo trovi cambiato ma lui non si è accorto
