Aggiunta immagine fwmhb

--- a/public/discog/fwmhb/index.html
+++ b/public/discog/fwmhb/index.html
@@ -1323,6 +1323,7 @@ Play on Jamendo
     <img src="back.jpg" class="grid-w33"/>
     <img src="credits.jpg" class="grid-w33"/>
     <img src="centerfold.jpg" class="grid-w33"/>
+    <img src="cover.jpg" class="grid-w33"/>
 
 </div>
 
