Corretto titolo dancing

--- a/public/discog/dancing/index.html
+++ b/public/discog/dancing/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>Danging le Cibaou-Cibaou &middot; The Radiostars</title>
-  <meta name="title" content="Danging le Cibaou-Cibaou &middot; The Radiostars" />
+  <title>Dancing le Cibaou-Cibaou &middot; The Radiostars</title>
+  <meta name="title" content="Dancing le Cibaou-Cibaou &middot; The Radiostars" />
   
   <meta name="description" content="Album - ©1997 Radiostars" />
   <meta name="keywords" content="Album, " />
@@ -66,7 +66,7 @@
   
   <meta property="og:url" content="http://localhost:1313/discog/dancing/">
   <meta property="og:site_name" content="The Radiostars">
-  <meta property="og:title" content="Danging le Cibaou-Cibaou">
+  <meta property="og:title" content="Dancing le Cibaou-Cibaou">
   <meta property="og:description" content="Descrizione pagina dancing">
   <meta property="og:locale" content="it">
   <meta property="og:type" content="article">
@@ -79,7 +79,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/discog/dancing/featured.jpg">
-  <meta name="twitter:title" content="Danging le Cibaou-Cibaou">
+  <meta name="twitter:title" content="Dancing le Cibaou-Cibaou">
   <meta name="twitter:description" content="Descrizione pagina dancing">
 
   
@@ -88,8 +88,8 @@
     "@context": "https://schema.org",
     "@type": "Article",
     "articleSection": "Discografia",
-    "name": "Danging le Cibaou-Cibaou",
-    "headline": "Danging le Cibaou-Cibaou",
+    "name": "Dancing le Cibaou-Cibaou",
+    "headline": "Dancing le Cibaou-Cibaou",
     "description": "Descrizione pagina dancing",
     "abstract": "Album - ©1997 Radiostars",
     "inLanguage": "it",
@@ -890,7 +890,7 @@
     <a
       class="hover:underline decoration-neutral-300 dark:underline-neutral-600"
       href="/discog/dancing/"
-      >Danging le Cibaou-Cibaou</a
+      >Dancing le Cibaou-Cibaou</a
     ><span class="px-1 text-primary-500">/</span>
   </li>
 
@@ -899,7 +899,7 @@
 
     
     <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 dark:text-neutral">
-      Danging le Cibaou-Cibaou
+      Dancing le Cibaou-Cibaou
     </h1>
     <div class="mt-1 mb-6 text-base text-neutral-500 dark:text-neutral-400 print:hidden">
       
