--- a/public/discog/index.html
+++ b/public/discog/index.html
@@ -1495,7 +1495,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/discog/dancing/">Danging le Cibaou-Cibaou</div>
+          href="/discog/dancing/">Dancing le Cibaou-Cibaou</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
