Aggiunto video concerto Ligabue

--- a/public/discog/punto-zero/index.html
+++ b/public/discog/punto-zero/index.html
@@ -1068,7 +1068,7 @@ Compilation in vinile - Toast Records 1996</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Danging le Cibaou-Cibaou</span
+                  >Dancing le Cibaou-Cibaou</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
