--- a/public/discog/fist-full-of-freebird/index.html
+++ b/public/discog/fist-full-of-freebird/index.html
@@ -1154,7 +1154,7 @@ Compilation - Freebird Records 1999</p>
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Danging le Cibaou-Cibaou</span
+                  >Dancing le Cibaou-Cibaou</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
